Increase java memory for demands of peak list search